# blog

./: README.md
celery-taskqueue/: .env  README.md  docker-compose.yaml
celery-taskqueue/celery-app/: .env  pyproject.toml  server.dockerfile  server.py  tasks.py  worker.dockerfile
dataset/: README.md  image_segmentation.py  sample_transformation.yaml  transforms.py
deep-monodepth/: README.md  requirements.txt  run_monodepth.ipynb
ml-workflow/: README.md
ml-workflow/preprocess/: Dockerfile  config.yaml.template  main.py  pyproject.toml
ml-workflow/train/: Dockerfile  config.yaml.template  main.py  pyproject.toml
ml-workflow/workflows/: workflow.yaml  workflow_slim.yaml
mmdeploy-panopticfpn-onnx/: Dockerfile  README.md  docker-compose.yaml  sample.ipynb
mmdet-onnx/: Dockerfile  README.md  docker-compose.yaml  panopticfpn_onnx.ipynb
multi-gpu-training/: README.md  requirements.txt  run_tf_mwms.sh  run_torch_ddp.sh  train_tf_mirroredstrategy.ipynb  train_tf_mirroredstrategy.py  train_tf_multiworker.ipynb  train_tf_multiworker_mirroredstrategy.py  train_torch_ddp.py  train_torch_ddp_v2.py  train_torch_dp.py
ngboost_dist_pred/: train_ngboost.ipynb
omegaconf/: train.py
onnx-compose/: Dockerfile  README.md  compose_onnx_ops.ipynb  docker-compose.yaml
streamlit-fastapi-example/: docker-compose.yaml  requirements.txt
streamlit-fastapi-example/fastapi-backend/: .dockerignore  Dockerfile  pyproject.toml  server.py
streamlit-fastapi-example/streamlit-front/: Dockerfile  app.py  pyproject.toml
tf-object-detection/: README.md  config.yaml  train.py
tfp-flipout/: models.py  train.py
timm-compare-networks/: compare_networks.ipynb
tour-of-go/: .#.go-version  append.go  array.go  basic-types.go  buffered-channels.go  channels.go  default-selection.go  defer-multi.go  errors.go  exercise-equivalent-binary-trees.go  exercise-errors.go  exercise-fibonacci-closure.go  exercise-images.go  exercise-loops-and-functions.go  exercise-maps.go  exercise-reader.go  exercise-rot-reader.go  exercise-slices.go  exercise-stringer.go  exercise-web-crawler.go  for.go  forever.go  functions-continued.go  functions.go  groutines.go  if-and-else.go  if-with-a-short-statement.go  imports.go  indirection-values.go  indirection.go  interfaces.go  map-literals-continued.go  methods-funcs.go  methods-pointers-explained.go  methods-pointers.go  methods-with-pointer-receivers.go  multiple-results.go  mutating-maps.go  mutex-counter.go  nil-interface-values.go  (+20 more)
vertex-pipelines-sample/: .env.dummy  README.md  docker-compose.yaml  pipeline.py  requirements.txt  sample-request.json
vertex-pipelines-sample/components/deploy/: Dockerfile  component.yaml  main.py
vertex-pipelines-sample/components/evaluate/: component.yaml  main.py  pyproject.toml
vertex-pipelines-sample/components/preprocess/: .dockerignore  Dockerfile  component.yaml  main.py
vertex-pipelines-sample/components/train/: Dockerfile  component.yaml  main.py  pyproject.toml
vertex-pipelines-sample/docker/serving/: Dockerfile  pyproject.toml  server.py
vertex-prediction/: README.md  docker-compose.yaml
vertex-prediction/app/: model.lgb  pyproject.toml  server.py
