[tool.poetry]
name = "celery-app"
version = "0.1.0"
description = ""
authors = ["Daigo Hirooka <daigo.hirooka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = {extras = ["redis"], version = "^5.1.2"}
flower = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
