[tool.poetry]
name = "preprocess"
version = "0.1.0"
description = ""
authors = ["Daigo Hirooka <daigo.hirooka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.1"
scikit-learn = "^0.24.2"
fsspec = "^2021.7.0"
gcsfs = "^2021.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
