[tool.poetry]
name = "streamlit-front"
version = "0.1.0"
description = ""
authors = ["Daigo Hirooka <daigo.hirooka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^0.82.0"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
