[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Daigo Hirooka <daigo.hirooka@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {version = "^0.68.1", extras = ["all"]}
lightgbm = "^3.2.1"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
